prevent text overflow from user provided names

--- a/src/css/body-aside.css
+++ b/src/css/body-aside.css
@@ -1,8 +1,12 @@
 aside ul {
-  width: 70%;
+  width: 100%;
   display: grid;
   gap: 10px;
   overflow: auto;
+  flex: auto;
+  align-items: start;
+  align-content: start;
+  justify-items: center;
 }
 
 aside li {
@@ -10,7 +14,7 @@ aside li {
   align-items: center;
   border: 2px solid #6e6ef0;
   border-radius: 20px;
-  width: 100%;
+  width: 70%;
   min-height: 30px;
 }
 
@@ -27,10 +31,14 @@ aside .project {
   flex: auto;
   display: flex;
   justify-content: center;
-  padding-left: 5px;
+  padding: 10px;
   color: #000000;
   font-weight: bold;
   cursor: pointer;
+}
+
+aside .project > .heading {
+  word-break: break-word;
 }
 
 aside .delete-button {
@@ -44,8 +52,14 @@ aside .delete-button {
   background-color: transparent;
 }
 
-aside .delete-button:hover {
-  color: #960000;
+aside .delete-button img {
+  content: url("../img/icons8-delete.svg");
+  width: 35px;
+  height: 35px;
+}
+
+aside .delete-button:hover > img {
+  transform: scale(1.5);
 }
 
 aside > * {
@@ -53,7 +67,5 @@ aside > * {
 }
 
 aside > span {
-  position: absolute;
-  bottom: 0;
   padding-bottom: 20px;
 }
